Algorithm two fases implemented