@@ -7,18 +7,13 @@ import gov.nasa.jpf.util.Pair;
 import gov.nasa.jpf.vm.Transition;
 
 import java.awt.geom.IllegalPathStateException;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.LinkedList;
+import java.util.*;
 
 public class Database {
 
     protected Oracle oracle;
 
-    protected ArrayList<TransactionalEvent> events;
-
-    protected ArrayList<TransactionalEvent> beginEvents;
+    protected ArrayList<Transaction> events;
 
     protected HashMap<EventData, Integer> backtrackPoints;
 
@@ -38,6 +33,8 @@ public class Database {
 
     protected HashMap<String, Integer> timesPathExecuted;
 
+    protected LinkedList<TransactionalEvent> deletedOnSwap;
+
     protected boolean mockAccess;
 
     protected GuideInfo guideInfo;
@@ -47,6 +44,8 @@ public class Database {
     protected static Database databaseInstance;
 
     protected String mockPath;
+
+    protected Config config;
 
     private Database(Config config) {
         events = new ArrayList<>();
@@ -64,7 +63,8 @@ public class Database {
         mockAccess = true;
         programExtendedOrder = new HashMap<>();
         timesPathExecuted = new HashMap<>();
-        beginEvents = new ArrayList<>();
+        deletedOnSwap = new LinkedList<>();
+        this.config = config;
     }
 
     public static Database getDatabase(Config config) {
@@ -113,19 +113,32 @@ public class Database {
 
         instructionsMapped.put(ed, t);
         timesPathExecuted.put(ed.getPath(), ed.getTime());
-        events.add(t);
+
 
         switch (t.getType()) {
             case WRITE:
                 //TODO: check constraint size
                 if(t.getTransactionId() != 0 && writeEventsPerVariable.get(t.getVariable()) == null){
-                    throw new IllegalStateException("Initial transaction does not contain variable "+t.getVariable());
+                    throw new IllegalStateException("Initial transaction does not contain variable " + t.getVariable());
                 }
+
                 if(!isGuided()) {
                     readEventsPerVariable.putIfAbsent(t.getVariable(), new ArrayList<>());
                 }
                 writeEventsPerVariable.putIfAbsent(t.getVariable(), new ArrayList<>());
-                writeEventsPerVariable.get(t.getVariable()).add((WriteTransactionalEvent) t);
+
+
+                var writesOfX = writeEventsPerVariable.get(t.getVariable());
+
+                if(!writesOfX.isEmpty() && writesOfX.get(writesOfX.size()-1).getTransactionId() == t.getTransactionId()){
+                    writesOfX.remove(writesOfX.size() -1);
+
+                }
+
+
+                writesOfX.add((WriteTransactionalEvent) t);
+
+
                 history.addWrite(t.getVariable(),t.getTransactionId());
 
                 break;
@@ -133,7 +146,7 @@ public class Database {
                 ArrayList<WriteTransactionalEvent> writeEvents = writeEventsPerVariable.get(t.getVariable());
                 if(writeEventsPerVariable.get(t.getVariable()) == null){
                     throw new IllegalStateException("Initial transaction does not contain variable " + t.getVariable());
-                }                //maximalWriteEventIndexes.put(t, writeEvents.size() - 1);
+                }
 
                 WriteTransactionalEvent w = writeEvents.get(writeEvents.size() - 1);
                 ReadTransactionalEvent r = (ReadTransactionalEvent) t;
@@ -149,22 +162,28 @@ public class Database {
                 sessionOrder.get(t.getThreadId()).add(t.getTransactionId());
                 programExtendedOrder.putIfAbsent(t.getThreadId(), 0);
                 oracle.addBegin(ed);
-                beginEvents.add(t);
+                events.add(new Transaction(new LinkedList<>()));
                 break;
             case END:
                 if(getDatabaseBacktrackMode() != GuideInfo.BacktrackTypes.SWAP) {
 
                     oracle.addEnd(ed);
-                    for (int i = events.size() - 2; i >= 0; --i) {
-                        TransactionalEvent e = events.get(i);
-                        if (e.getTransactionId() != t.getTransactionId()) break;
-                        else if (e.getType() == TransactionalEvent.Type.WRITE) {
-                            backtrackPoints.putIfAbsent(e.getEventData(), readEventsPerVariable.get(e.getVariable()).size() - 1);
+                    for(var e: events.get(events.size()-1)){
+                        if (e.getType() == TransactionalEvent.Type.WRITE) {
+                            var writes = writeEventsPerVariable.get(e.getVariable());
+                            if(writes.get(writes.size() - 1).getObservationSequenceIndex() == e.getObservationSequenceIndex()) {
+                                backtrackPoints.putIfAbsent(e.getEventData(), readEventsPerVariable.get(e.getVariable()).size() - 1);
+                            }
+                            else{
+                                backtrackPoints.putIfAbsent(e.getEventData(), -1);
+                            }
                         }
                     }
                 }
                 break;
         }
+
+        events.get(events.size()-1).addEvent(t);
         programExtendedOrder.put(t.getThreadId(), programExtendedOrder.get(t.getThreadId()) + 1);
 
     }
@@ -189,15 +208,16 @@ public class Database {
 
         EventData ed = e.getEventData();
         return ed.equals(new EventData(s, timesPathExecuted.get(ed.getPath()), ed.getBeginEvent()));
-       }
+    }
 
+    //TODO
     protected void generateRestorePath(ReadTransactionalEvent r){
         EventData backEvent = r.getBacktrackEvent();
         TransactionalEvent e = instructionsMapped.get(backEvent);
         TransactionalEvent w = r.getWriteEvent();
         LinkedList<Transaction> restorePath = new LinkedList<>();
 
-        int pi_idx = e.getObservationSequenceIndex()+1;
+        int pi_idx = e.getTransactionId()+1;
         EventData orac_idx = new EventData("", -1, null);
         orac_idx = oracle.getNextData(orac_idx);
         while(true){
@@ -209,29 +229,34 @@ public class Database {
                 TransactionalEvent begin = instructionsMapped.get(orac_idx);
                 TransactionalEvent end = instructionsMapped.get(oracle.getEnd(orac_idx));
                 LinkedList<TransactionalEvent> trans = new LinkedList<>();
-                if(begin.getTransactionId() == r.getTransactionId()){
-                   for(int i = begin.getObservationSequenceIndex(); i < r.getObservationSequenceIndex(); ++i){
-                       trans.add(events.get(i));
-                   }
-                   var wMCW = instructionsMapped.get(maximalWriteEventIndexes.get(r.getEventData()));
-                   r.setWriteEvent((WriteTransactionalEvent) wMCW);
-                   trans.add(r);
-                   var endData = oracle.getEnd(begin.getEventData());
-                   trans.add(new UnknownEvent(endData));
-                   //trans.add(end); r is swapped, so end is null.
-                   restorePath.add(new Transaction(trans));
-                }
-                else if(pi_idx <= end.getObservationSequenceIndex()) {
-                    for (int j = pi_idx; j <= end.getObservationSequenceIndex(); ++j) {
-                        TransactionalEvent t = events.get(j);
-                        trans.add(t);
-                        if(t.getType() == TransactionalEvent.Type.END) {
-                            restorePath.add(new Transaction(trans));
-                            trans = new LinkedList<>();
-                        }
+
+                if(begin.getTransactionId() == r.getTransactionId()) {
+                    for (var ei : events.get(begin.getTransactionId())) {
+                        if(ei.getObservationSequenceIndex() == r.getObservationSequenceIndex()) break;
+                        trans.add(ei);
                     }
-                    pi_idx = end.getObservationSequenceIndex() + 1;
+
+                    var wMCW = instructionsMapped.get(maximalWriteEventIndexes.get(r.getEventData()));
+                    r.setWriteEvent((WriteTransactionalEvent) wMCW);
+                    trans.add(r);
+                    var endData = oracle.getEnd(begin.getEventData());
+                    trans.add(new UnknownEvent(endData));
+                    //trans.add(end); r is swapped, so end is null.
+                    restorePath.add(new Transaction(trans));
                 }
+                else {
+                    while (pi_idx <= end.getTransactionId()) {
+                        for(var t : events.get(pi_idx)){
+                            trans.add(t);
+                            if(t.getType() == TransactionalEvent.Type.END) {
+                                restorePath.add(new Transaction(trans));
+                                trans = new LinkedList<>();
+                            }
+                        }
+                        pi_idx++;
+                    }
+                }
+
                 //e.equals(w)?
                 //end will also have the same trId, but begin is always not null
                 if(begin.getTransactionId() == w.getTransactionId()){
@@ -245,37 +270,51 @@ public class Database {
     }
 
 
+    //TODO
     protected void generateBacktrackPath(WriteTransactionalEvent w, ReadTransactionalEvent r){
         LinkedList<Transaction> backtrackPath = new LinkedList<>();
         LinkedList<TransactionalEvent> transaction = new LinkedList<>();
-        int i = r.getObservationSequenceIndex();
 
         //We need to start in a complete transaction, i.e. after the read.
-        while(events.get(i).getType() != TransactionalEvent.Type.BEGIN){
-            ++i;
-        }
-        while(i < events.size()){
-            if(history.
-                    areWRSO_starRelated(events.get(i).getTransactionId(), w.getTransactionId())){
-                while(i < events.size()) {
-                    transaction.add(events.get(i));
-                    if(events.get(i).getType() == TransactionalEvent.Type.END) break;
-                    ++i;
-                }
+        //int i = events.get(r.getTransactionId()).getFirst().getObservationSequenceIndex();
+        var trRead = events.get(r.getTransactionId());
 
+
+        for(int i = r.getTransactionId() + 1; i < events.size(); ++i){
+            if(history.areWRSO_starRelated(i, w.getTransactionId())){
+                for(var e: events.get(i)){
+                    transaction.add(e);
+                }
                 backtrackPath.add(new Transaction(transaction));
                 transaction = new LinkedList<>();
             }
-            ++i;
+            else{
+                for(var e: events.get(i)){
+                    if(e.getType() == TransactionalEvent.Type.READ)
+                        deletedOnSwap.add(e);
+                }
+            }
+
         }
-        i = r.getObservationSequenceIndex();
-        while(i >= 0 && events.get(i).getTransactionId() == r.getTransactionId()){
-            transaction.addFirst(events.get(i));
-            --i;
+        var deletedOnSwapR = new LinkedList<TransactionalEvent>();
+        for(var e: trRead){
+            if(e.getObservationSequenceIndex() <= r.getObservationSequenceIndex()) {
+                transaction.add(e);
+            }
+            else if(e.getType() == TransactionalEvent.Type.READ){
+                deletedOnSwapR.addFirst(e);
+            }
         }
-        //++trIndex; //we don't want to backtrack the end of the last transaction.
+        if(!deletedOnSwapR.isEmpty()) {
+            var prevIt = deletedOnSwapR.listIterator(deletedOnSwapR.size() - 1);
+            while (prevIt.hasPrevious()) {
+                deletedOnSwap.addFirst(prevIt.previous());
+            }
+        }
+
         backtrackPath.add(new Transaction(transaction));
-        guideInfo.addGuide(backtrackPath, events.get(i), w);
+
+        guideInfo.addGuide(backtrackPath, events.get(r.getTransactionId()-1).getLast(), w);
 
         //TODO: call DatabaseRelations to refactor the relations.
     }
@@ -291,13 +330,16 @@ public class Database {
             }
             return;
         }
-        TransactionalEvent e = events.get(events.size() - 1);
+        var tr = events.get(events.size() - 1);
+        TransactionalEvent e = tr.getLast();
         switch (e.getType()) {
             case READ:
                 ReadTransactionalEvent r = (ReadTransactionalEvent) e;
                 WriteTransactionalEvent w = ((ReadTransactionalEvent) e).getWriteEvent();
 
-                if (!swapped(e) && w.getWriteIndex() != 0 && !isGuided()) {
+                var localRead = w.getTransactionId() == r.getTransactionId();
+
+                if (!swapped(e) && w.getWriteIndex() != 0 && !isGuided() && !localRead) {
                     WriteTransactionalEvent nw = writeEventsPerVariable.get(e.getVariable()).get(w.getWriteIndex() - 1);
                     changeWriteRead(nw, r);
                     guideInfo.setDatabaseBacktrackMode(GuideInfo.BacktrackTypes.READ);
@@ -306,8 +348,13 @@ public class Database {
                 } else if (!swapped(e) || isGuided()) {
                     readEventsPerVariable.get(e.getVariable()).remove(readEventsPerVariable.get(e.getVariable()).size() - 1);
                     eraseWriteRead(r);
-                    if(!isGuided())
+                    if(!isGuided()) {
                         maximalWriteEventIndexes.remove(r.getEventData());
+                    }
+                    else if(!deletedOnSwap.isEmpty() && deletedOnSwap.getLast() == r) {
+                        maximalWriteEventIndexes.remove(r.getEventData());
+                        deletedOnSwap.removeLast();
+                    }
 
                 } else {
                     generateRestorePath(r);
@@ -327,10 +374,8 @@ public class Database {
                 if (p == null) {
                     guideInfo.setDatabaseBacktrackMode(GuideInfo.BacktrackTypes.JPF);
                     //remove all backtrack points
-                    for(int i = events.size() - 2; i >= 0; --i){
-                        TransactionalEvent ei = events.get(i);
-                        if (ei.getTransactionId() != e.getTransactionId()) break;
-                        else if (ei.getType() == TransactionalEvent.Type.WRITE) {
+                    for(var ei : tr){
+                        if (ei.getType() == TransactionalEvent.Type.WRITE) {
                             backtrackPoints.remove(ei.getEventData());
                         }
                     }
@@ -341,13 +386,17 @@ public class Database {
                     ReadTransactionalEvent rSwap = p._2;
                     generateBacktrackPath(wSwap, rSwap);
 
-                    for (int i = rSwap.getObservationSequenceIndex() - 1; i >= 0; --i) {
+                    rSwap.setBacktrackEvent(events.get(rSwap.getTransactionId()-1).getLast().getEventData());
+
+                    /*for (int i = rSwap.getObservationSequenceIndex() - 1; i >= 0; --i) {
                         //rSwap won't be in the first transaction.
                         if (events.get(i).getType() == TransactionalEvent.Type.END) {
                             rSwap.setBacktrackEvent(events.get(i).getEventData());
                             break;
                         }
                     }
+
+                     */
                     return;
                 }
 
@@ -355,7 +404,6 @@ public class Database {
             case BEGIN:
                 history.removeLastTransaction();
                 sessionOrder.get(e.getThreadId()).remove(sessionOrder.get(e.getThreadId()).size() - 1);
-                beginEvents.remove(beginEvents.size()-1);
                 break;
 
         }
@@ -372,7 +420,15 @@ public class Database {
         int n = timesPathExecuted.get(ed.getPath());
         if(n == -1) timesPathExecuted.remove(ed.getPath());
         else timesPathExecuted.put(ed.getPath(), n-1);
-        events.remove(events.size() - 1);
+
+        tr.removeLast();
+        if(tr.isEmpty()) events.remove(events.size() - 1);
+        if(e.getType() == TransactionalEvent.Type.WRITE){
+            var newWE = tr.getLastWriteEvent(e.getVariable());
+            if(newWE != null){
+                writeEventsPerVariable.get(e.getVariable()).add(newWE);
+            }
+        }
 
     }
 
@@ -383,39 +439,44 @@ public class Database {
     }
 
     public int getNumberEvents() {
-        return events.size();
+        return events.isEmpty() ? 0 : events.get(events.size() - 1).getLast().getObservationSequenceIndex() + 1;
 
     }
 
     public Integer getNumberOfWrites(String variable) {
-        return writeEventsPerVariable.getOrDefault(variable, new ArrayList<>()).size();
+        var list = writeEventsPerVariable.getOrDefault(variable, new ArrayList<>());
+        if(list.isEmpty()) return 0;
+        else if(list.get(list.size() -1).getTransactionId() == getTransactionalId()) return list.size() - 1;
+        else return list.size();
 
     }
 
+    //TODO
     public boolean swapped(TransactionalEvent e) {
         if (e.getType() != TransactionalEvent.Type.READ) return false;
         ReadTransactionalEvent r = (ReadTransactionalEvent) e;
         WriteTransactionalEvent w = r.getWriteEvent();
         if (oracle.compareEvents(r, w) > 0) return false;
 
+        //This should be equivalent to w.getTransactionId() + 1 == r.getTransactIonID()
         for(int i = 0; i < r.getTransactionId(); ++i){
             if(history.areWRSO_plusRelated(w.getTransactionId(),i))
                 return false;
         }
         //optimize with a segement tree
-        for(int i = e.getObservationSequenceIndex() - 1; i >= 0; --i){
-            TransactionalEvent ei = events.get(i);
-            if(ei.getTransactionId() != e.getTransactionId())
-                break;
-            else if(ei.getType() == TransactionalEvent.Type.READ &&
-                    ((ReadTransactionalEvent) ei).getWriteEvent().getTransactionId() == w.getTransactionId()){
+        for(var ei: events.get(e.getTransactionId())){
+            if(ei.getObservationSequenceIndex() == e.getObservationSequenceIndex()) break;
+            if (ei.getType() == TransactionalEvent.Type.READ &&
+                    ((ReadTransactionalEvent) ei).getWriteEvent().getTransactionId() == w.getTransactionId())
                 return false;
-            }
         }
+
         return true;
         //return databaseRelations.numberWR(w.getTransactionId(), e.getTransactionId()) == 1;
 
     }
+
+
 
     /*//TODO: check if this is true for all our models.
     public boolean maximumConsistentWrite(TransactionalEvent w, int n) {
@@ -434,41 +495,58 @@ public class Database {
         else return true;
     }
 
+    //TODO
     //write, read
     public Pair<WriteTransactionalEvent, ReadTransactionalEvent> nextSwap(){
-        for(int i = events.size()-2; i >= 0; --i){
-            TransactionalEvent e = events.get(i);
-            switch (e.getType()){
-                case BEGIN:
-                    //There is no more write events in this transaction, we cannot swap.
-                    return null;
-                case WRITE:
-                    WriteTransactionalEvent w = (WriteTransactionalEvent) e;
-                    for (int j = backtrackPoints.get(w.getEventData()); j >= 0; --j) {
-                        //TODO: revisar
-                        ReadTransactionalEvent r = readEventsPerVariable.get(w.getVariable()).get(j);
-                        if(history.areWRSO_starRelated(r.getTransactionId(), w.getTransactionId())) continue;
-                        if(!isMaximallyAdded(r)) continue;
-                        boolean delIMA = true;
-                        for(int k = r.getObservationSequenceIndex() + 1;k < events.size() && delIMA; ++k){
-                            TransactionalEvent d = events.get(k);
-                            if(!history.areWRSO_starRelated(d.getTransactionId(),w.getTransactionId())
-                                && !isMaximallyAdded(d)){
-                                delIMA = false;
-                            }
-                        }
+        var tr = events.get(events.size()- 1);
+        var trListIterator = tr.getListIterator(tr.size() - 1);
+        while(trListIterator.hasPrevious()){
+            var e = trListIterator.previous();
+            if(e.getType() == TransactionalEvent.Type.WRITE){
+                WriteTransactionalEvent w = (WriteTransactionalEvent) e;
+                for (int j = backtrackPoints.get(w.getEventData()); j >= 0; --j) {
+                    //TODO: revisar
+                    ReadTransactionalEvent r = readEventsPerVariable.get(w.getVariable()).get(j);
+                    if(history.areWRSO_starRelated(r.getTransactionId(), w.getTransactionId())) continue;
+                    if(!isMaximallyAdded(r)) continue;
 
-                        if(delIMA){
-                            backtrackPoints.put(e.getEventData(),j-1);
-                            return new Pair<>(w, r);
+                    boolean delIMA = true;
+
+                    var trRead = events.get(r.getTransactionId());
+                    var trIteratorR = trRead.getListIterator(r.getObservationSequenceIndex() - trRead.getFirst().getObservationSequenceIndex() + 1);
+
+                    //we assume that for every pair of events e, e' \in tr, e.trID == e'.trID
+                    //events in trRead
+                    while(trIteratorR.hasNext()){
+                        var d = trIteratorR.next();
+                        if(!isMaximallyAdded(d)){
+                            delIMA = false;
+                            break;
                         }
                     }
-                    break;
 
-                default:
-                    //do nothing
+                    //events after trRead
+                    if(delIMA) {
+                        for (int t = r.getTransactionId() + 1; t < events.size(); ++t) {
+                            if(!history.areWRSO_starRelated(t, w.getTransactionId())) {
+                                for (var d : events.get(t)) {
+                                    if (!isMaximallyAdded(d)) {
+                                        delIMA = false;
+                                        break;
+                                    }
+                                }
+                            }
+                        }
+                    }
+
+                    if(delIMA){
+                        backtrackPoints.put(e.getEventData(),j-1);
+                        return new Pair<>(w, r);
+                    }
+                }
             }
         }
+
         return null;
     }
 
@@ -530,17 +608,17 @@ public class Database {
     }
 
     public void confirmMaximumConsistency(){
-        if(events.isEmpty()) return;
-        TransactionalEvent t = events.get(events.size() - 1);
+        if(events.isEmpty() || guideInfo.getDatabaseBacktrackMode() == GuideInfo.BacktrackTypes.SWAP) return;
+        TransactionalEvent t = events.get(events.size() - 1).getLast();
         if(t.getType() == TransactionalEvent.Type.READ){
             ReadTransactionalEvent r = (ReadTransactionalEvent) t;
+            //TODO: before there was putIfAbsent
             maximalWriteEventIndexes.putIfAbsent(r.getEventData(), r.getWriteEvent().getEventData());
         }
     }
 
     public int getTransactionalId() {
-        if(events.isEmpty()) return -1;
-        return events.get(events.size() -1).getTransactionId();
+        return events.size() - 1;
     }
 
     public int getTransactionalS0Id(int threadId){
@@ -554,12 +632,7 @@ public class Database {
     }
 
     public TransactionalEvent getLastEvent(){
-        return getEvent(events.size()-1);
-    }
-
-    protected TransactionalEvent getEvent(int idx){
-        if(idx < 0 || idx >= events.size()) return null;
-        else return events.get(idx);
+        return events.isEmpty() ? null : events.get(events.size() - 1).getLast();
     }
 
     //Only for printing reasons. Hack.
@@ -574,17 +647,30 @@ public class Database {
     }
 
     public EventData getLastBeginData(){
-        if(beginEvents.isEmpty()) return null;
-        else return beginEvents.get(beginEvents.size()-1).getEventData();
+        if(events.isEmpty()) return null;
+        else return events.get(events.size() - 1).getFirst().getEventData();
+
     }
 
     public String getDatabaseState(){
         StringBuilder sb = new StringBuilder();
-        for(var e: events){
-            sb.append(e.toWRString()).append("\n");
+        for(var t: events){
+            for(var e: t) {
+                sb.append(e.toWRString()).append("\n");
+            }
         }
-        sb.append("Completeness: ").append(!isAssertionViolated()).append("\n");
+        sb.append("Consistency: ").append(!isAssertionViolated()).append("\n");
         return sb.toString();
+    }
+
+    public boolean isTrulyConsistent(){
+        if(config.getString("db.database_true_model.class") != null) {
+            var trueHistory = config.getEssentialInstance("db.database_true_model.class", History.class,
+                    new Class[]{History.class},
+                    new Object[]{history});
+            return !isAssertionViolated() && trueHistory.isConsistent();
+        }
+        else return isConsistent();
     }
 
 }
